# packages/db/src/schema/index.ts
@@ -10,3 +10,4 @@ export * from "./labRuns";
 export * from "./labJudgements";
 export * from "./generationFailures";
 export * from "./labReleases";
+export * from "./waitlist";
